# android-device-manager-python

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: cd.yml  ci.yml
api/: index.html
api/adb/: index.html
api/android_device/: index.html
api/avd/: index.html
api/constants/: index.html
api/emulator/: index.html
docs/: index.md
docs/examples/: apk-management.md
docs/examples/advanced/: adbclient.md  avdmanager.md  emulatormanager.md
docs/getting-started/: installation.md
examples/: create_device.py  install_apks.py
examples/advanced/: index.html
examples/advanced/adbclient/: index.html
examples/advanced/avdmanager/: index.html
examples/advanced/emulatormanager/: index.html
examples/apk-management/: index.html
examples/automation/: index.html
examples/basic-usage/: index.html
examples/device-info/: index.html
examples/file-operations/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
src/android_device_manager/: __init__.py  android_device.py  exceptions.py
src/android_device_manager/adb/: client.py  exceptions.py
src/android_device_manager/avd/: __init__.py
tests/: conftest.py  test_android_device.py
tests/adb/: test_client.py
tests/emulator/: test_config.py
tests/utils/: test_android_sdk.py  test_sdk_manager.py
troubleshooting/: index.html
