[project]
name = "android-device-manager"
version = "0.0.0"
description = "Android Device Manager is a Python library for creating, launching, and managing Android device programmatically. "
authors = [
    { name = "Jérémy Woirhaye", email = "jerem.woirhaye@gmail.com" }
]
maintainers = [
    { name = "Jérémy Woirhaye", email = "jerem.woirhaye@gmail.com" }
]

requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/jwoirhaye/android-device-manager-python"
Source = "https://github.com/jwoirhaye/android-device-manager-python"
Issues = "https://github.com/jwoirhaye/android-device-manager-python/issues"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
markers = [
    "no_fake_sdk: disable the fixture fake_sdk for this test",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
